# CS200-Assignment-3

./: CMakeLists.txt  CMakePresets.json  Mesh.h  MeshRenderDemo.cpp  MyMesh.cpp  MyMesh.h  SolidRender.cpp  SolidRenderTest.cpp  a.out  cs200opengl_demo.cpp  flake.nix
